[gd_scene format=4 uid="uid://bm6vflkk8xg30"]

[ext_resource type="Texture2D" uid="uid://ciglny0pa7kji" path="res://play/tile-atlases/tiles.png" id="1_3s5gp"]
[ext_resource type="Texture2D" uid="uid://baforln2mc5me" path="res://play/tile-atlases/test.png" id="1_6hll6"]
[ext_resource type="Script" uid="uid://c6sgu6sth1eu1" path="res://play/level.gd" id="1_bg3j4"]
[ext_resource type="PackedScene" uid="uid://3gbltwsnvvfb" path="res://utils/vignette.tscn" id="1_u4q3m"]
[ext_resource type="Script" uid="uid://d3wjcqjs4jdor" path="res://input/player/player_director.gd" id="3_6sy0s"]
[ext_resource type="Script" uid="uid://dwys5mwbuw85s" path="res://input/ai/ai_director.gd" id="4_f2owf"]
[ext_resource type="Script" uid="uid://ddbas45a3e81e" path="res://play/hud.gd" id="7_gmsnh"]
[ext_resource type="Theme" uid="uid://0t4errmfvln0" path="res://menus/theme_level_hud.theme" id="7_sxuih"]
[ext_resource type="Script" uid="uid://cnk6cyi6oyhbp" path="res://play/hud/button_with_blips.gd" id="9_rgcgw"]
[ext_resource type="PackedScene" uid="uid://dhwxpcx7ajaji" path="res://play/hud/blip.tscn" id="10_gwg6o"]
[ext_resource type="Script" uid="uid://gb7t3y8ncwep" path="res://utils/delete_on_enter.gd" id="11_0d8q5"]

[sub_resource type="Gradient" id="Gradient_bg3j4"]
colors = PackedColorArray(0.23082569, 0.7133575, 0.9167679, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6sy0s"]
gradient = SubResource("Gradient_bg3j4")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u4q3m"]
resource_name = "outline"
texture = ExtResource("1_6hll6")
texture_region_size = Vector2i(128, 72)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3s5gp"]
texture = ExtResource("1_3s5gp")
texture_region_size = Vector2i(128, 72)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0

[sub_resource type="TileSet" id="TileSet_fqe43"]
tile_shape = 3
tile_layout = 4
tile_offset_axis = 1
tile_size = Vector2i(128, 72)
uv_clipping = true
sources/1 = SubResource("TileSetAtlasSource_3s5gp")
sources/0 = SubResource("TileSetAtlasSource_u4q3m")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0d8q5"]

[node name="Level" type="Node2D" unique_id=13868467 node_paths=PackedStringArray("base_tile_map_layer")]
texture_filter = 3
position = Vector2(480, 270)
script = ExtResource("1_bg3j4")
base_tile_map_layer = NodePath("TileMapLayers/BaseTileMapLayer")

[node name="TileMapLayers" type="Node2D" parent="." unique_id=994423606]
editor_description = "The 32px X offset is to center the hex grid tiles on 0,0."
position = Vector2(32, 0)

[node name="Vignette" parent="TileMapLayers" unique_id=1689915564 instance=ExtResource("1_u4q3m")]
offset_left = -512.0
offset_top = -270.0
offset_right = 448.0
offset_bottom = 270.0

[node name="Directors" type="Node2D" parent="TileMapLayers" unique_id=440455703]
unique_name_in_owner = true
visible = false
position = Vector2(-32, 0)

[node name="Player" type="Node2D" parent="TileMapLayers/Directors" unique_id=1321501885]
script = ExtResource("3_6sy0s")
metadata/_custom_type_script = "uid://d3wjcqjs4jdor"

[node name="MainCharacter" type="Node2D" parent="TileMapLayers/Directors/Player" unique_id=310050252]

[node name="Sprite2D" type="Sprite2D" parent="TileMapLayers/Directors/Player/MainCharacter" unique_id=1704811731]
texture = SubResource("GradientTexture2D_6sy0s")

[node name="AIDirector" type="Node2D" parent="TileMapLayers/Directors" unique_id=2134352030]
script = ExtResource("4_f2owf")
metadata/_custom_type_script = "uid://dwys5mwbuw85s"

[node name="BaseTileMapLayer" type="TileMapLayer" parent="TileMapLayers" unique_id=1254354450]
tile_map_data = PackedByteArray("AAAAAP//AAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAAAAP7/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAAAAAAAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wAAAAAAAAAAAAD+////AAAAAAAAAAD///7/AAAAAAAAAAAAAP3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAD//wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wAAAAAAAAAAAAD9////AAAAAAAAAAD+//7/AAAAAAAAAAD///3/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAACAPz/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAACAAAAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fqe43")

[node name="Camera" type="Camera2D" parent="." unique_id=695801089]
editor_description = "Main camera"

[node name="HUD" type="CanvasLayer" parent="." unique_id=1415317388]
visible = false
script = ExtResource("7_gmsnh")

[node name="Root" type="Control" parent="HUD" unique_id=2106034139]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_sxuih")

[node name="LeftSide" type="VBoxContainer" parent="HUD/Root" unique_id=1569224161]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -8.0
offset_right = 120.0
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MoveButton" type="Button" parent="HUD/Root/LeftSide" unique_id=635348305]
unique_name_in_owner = true
layout_mode = 2
text = "Move"
alignment = 2
script = ExtResource("9_rgcgw")
metadata/_custom_type_script = "uid://cnk6cyi6oyhbp"

[node name="Blips" type="HBoxContainer" parent="HUD/Root/LeftSide/MoveButton" unique_id=1874783822]
custom_minimum_size = Vector2(0, 6)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
alignment = 2

[node name="Blip" parent="HUD/Root/LeftSide/MoveButton/Blips" unique_id=2046570082 instance=ExtResource("10_gwg6o")]
layout_mode = 2
script = ExtResource("11_0d8q5")

[node name="Actions" type="PanelContainer" parent="HUD/Root/LeftSide" unique_id=1485869668]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Root/LeftSide/Actions" unique_id=1524081518]
layout_mode = 2

[node name="Actions" type="Button" parent="HUD/Root/LeftSide/Actions/VBoxContainer" unique_id=1198491881]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 13
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0d8q5")
disabled = true
text = "Actions"
alignment = 2
script = ExtResource("9_rgcgw")
metadata/_custom_type_script = "uid://cnk6cyi6oyhbp"

[node name="Blips" type="HBoxContainer" parent="HUD/Root/LeftSide/Actions/VBoxContainer/Actions" unique_id=2030344501]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackLHButton" type="Button" parent="HUD/Root/LeftSide/Actions/VBoxContainer" unique_id=1631354247]
unique_name_in_owner = true
layout_mode = 2
text = "Left Hand"
alignment = 2

[node name="AttackRHButton" type="Button" parent="HUD/Root/LeftSide/Actions/VBoxContainer" unique_id=37920591]
unique_name_in_owner = true
layout_mode = 2
text = "Right Hand"
alignment = 2
